<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="331dp"
        android:layout_height="409dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/product_image" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <ImageButton
            android:id="@+id/minus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/cart"
            android:scaleType="centerCrop"
            android:src="@drawable/minus"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="79dp"
            android:layout_height="42dp"
            android:gravity="center"
            android:text="@string/quantity_selected"
            android:textSize="19sp" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@null"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/plus"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.appcompat.widget.LinearLayoutCompat>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp">
        <TextView
            android:id="@+id/detailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/olive_oil_name"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/detailPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        >
        <TextView
            android:id="@+id/detailQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:layout_marginEnd="20dp"/>

        <TextView
            android:id="@+id/detailType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/detailLiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liter"
            android:layout_marginEnd="20dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:layout_marginBottom="10dp"
        android:text="@string/buy_now"
        style="@style/OliveOilButton"
        />

    <Button
        android:id="@+id/button2"
        android:layout_width="238dp"
        android:layout_height="48dp"
        android:text="@string/add_to_cart"
        style="@style/OliveOilButton"/>

        <ImageButton
            android:id="@+id/cartButton"
            android:layout_width="90dp"
            android:layout_height="83dp"
            android:background="@null"
            android:contentDescription="@string/cart"
            android:scaleType="centerInside"
            android:src="@drawable/cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>