<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:id="@+id/cartCardView"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="horizontal"
        android:background="#f9f9f9">

        <ImageView
            android:id="@+id/cartItemImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="12dp"
            android:contentDescription="@string/product_image"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/cartItemName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olive_oil_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cartItemPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="14sp"
                android:textColor="#555" />

            <TextView
                android:id="@+id/cartItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textSize="14sp"
                android:textColor="#777" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/removeButton"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@null"
            android:contentDescription="@string/x"
            android:scaleType="centerCrop"
            android:src="@drawable/trashcan"
            tools:ignore="TouchTargetSizeCheck" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
